--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-	<header class="text-gray-400 bg-gray-900 body-font">
+	<header class=" fixed top-0 w-full z-10 text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 		  <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="index.html">
 			<!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
@@ -28,10 +28,70 @@
 
 
 
+	  <section class="text-gray-400 bg-gray-900 body-font overflow-hidden mt-5 pb-1 pt-0">
+		<div class="container px-5 py-24 mx-auto">
+		  <div class="-my-8 divide-y-2 divide-gray-800">
+			<div class="py-8 flex flex-wrap md:flex-nowrap">
+			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+				<span class="font-semibold title-font text-white">COLLAGE PREDICTOR</span>
+				<span class="mt-1 text-gray-500 text-sm">24 Apr 2024</span>
+			  </div>
+			  <div class="md:flex-grow">
+				<h2 class="text-2xl font-medium text-white title-font mb-2">Find Your Ideal College with College Predictor</h2>
+				<p class="leading-relaxed">Discover the perfect college for your B.Tech CS dreams using our College Predictor tool. Input your rank or percentile from exams like JEE Mains, Advanced, and more, along with your preferred state, and get a curated list of top colleges near you. Our tool offers dark and light themes, a print feature, and prioritizes user privacy—making college selection stress-free and secure!</p>
+				<a class="text-green-400 inline-flex items-center mt-4" href="projects/collage.pred.html">Learn More
+				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path d="M5 12h14"></path>
+					<path d="M12 5l7 7-7 7"></path>
+				  </svg>
+				</a>
+				<a class="text-green-400 inline-flex items-center mt-4" href="https://jee-college-predictor.netlify.app/" target="_blank">	Check Tool
+					<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					  <path d="M5 12h14"></path>
+					  <path d="M12 5l7 7-7 7"></path>
+					</svg>
+				  </a>
+			  </div>
+			</div>
+			<div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
+			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+				<span class="font-semibold title-font text-white">LAPTOP PREDICTOR</span>
+				<span class="mt-1 text-gray-500 text-sm">(Coming Soon)</span>
+			  </div>
+			  <div class="md:flex-grow">
+				<h2 class="text-2xl font-medium text-white title-font mb-2">Coming Soon: Simplify Laptop Shopping with Laptop Predictor</h2>
+				<p class="leading-relaxed">Stay tuned for our upcoming project, Laptop Predictor! Determine the ideal laptop based on your budget and purpose. Whether for work, study, or gaming, our tool will help you make the right choice hassle-free. Privacy-friendly and feature-packed—your ultimate laptop shopping companion is on the way!</p>
+				<a class="text-green-400 inline-flex items-center mt-4" href="projects/laptop.pred.html">Learn More
+				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path d="M5 12h14"></path>
+					<path d="M12 5l7 7-7 7"></path>
+				  </svg>
+				</a>
+			  </div>
+			</div>
+			<div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
+			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+				<span class="font-semibold title-font text-white">(name not decided)</span>
+				<span class="mt-1 text-gray-500 text-sm">(Coming Soon)</span>
+			  </div>
+			  <div class="md:flex-grow">
+				<h2 class="text-2xl font-medium text-white title-font mb-2">Stay Tuned for more updates..!</h2>
+				<p class="leading-relaxed">Contact us via Telegram Group</p>
+				<a class="text-green-400 inline-flex items-center mt-4" href="contact.html">Check all Social Media Links
+				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path d="M5 12h14"></path>
+					<path d="M12 5l7 7-7 7"></path>
+				  </svg>
+				</a>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
 
 
 
-	  <footer class="text-gray-400 bg-gray-900 body-font">
+	  <footer class="fixed bottom-0 w-full z-10 text-gray-400 bg-gray-900 body-font">
 		<div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
 		  <a class="flex title-font font-medium items-center md:justify-start justify-center text-white" href="index.html">
 			<!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
@@ -40,7 +100,7 @@
 			<span class="ml-3 text-xl">G.T.C</span>
 		  </a>
 		  <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">Made with love by
-			<a href="https://github.com/kartik2005221" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer" target="_blank">@kartik2005221</a>
+			<a href="https://t.me/Dr_AiR" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer" target="_blank">@AiR</a>
 		  </p>
 		  <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
 			<!-- <a class="text-gray-400" href="https://facebook.com/kartik2005221" target="_blank">
