--- a/team_members_pages/sam.html
+++ b/team_members_pages/sam.html
@@ -40,7 +40,7 @@
 			<span class="ml-3 text-xl">G.T.C</span>
 		  </a>
 		  <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">Made with love by
-			<a href="https://github.com/kartik2005221" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer" target="_blank">@kartik2005221</a>
+			<a href="https://t.me/Dr_AiR" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer" target="_blank">@AiR</a>
 		  </p>
 		  <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
 			<!-- <a class="text-gray-400" href="https://facebook.com/kartik2005221" target="_blank">
