Update Contact.html as per demand

--- a/contact.html
+++ b/contact.html
@@ -244,11 +244,11 @@
 				</div>
 				<div class="p-4 lg:w-1/2">
 					<div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-					<img alt="Shasank" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/logo.jpg">
+					<img alt="Shasank" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/shashank.jpg">
 					<div class="flex-grow sm:pl-8">
-						<h2 class="title-font font-medium text-lg text-white">Shasank</h2>
-						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+						<h2 class="title-font font-medium text-lg text-white">Shashank</h2>
+						<h3 class="text-gray-500 mb-3">FULL STACK</h3>
+						<p class="mb-4">Full Stack Developer</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -260,9 +260,13 @@
 							<path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
 							</svg>
 						</a> -->
-						<a class="ml-2 text-gray-500" target="_blank">
-							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+						<a class="ml-2 text-gray-500" target="_blank" href="https://portfolio-lyart-nine-88.vercel.app/">
+							<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
 							<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+							</svg> -->
+							<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path d="M5 12h14"></path>
+								<path d="M12 5l7 7-7 7"></path>
 							</svg>
 						</a>
 						</span>
@@ -425,7 +429,7 @@
 				</div>
 				<div class="p-4 lg:w-1/2">
 				<div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-					<img alt="Sujal" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/logo.jpg">
+					<img alt="Sujal" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/sujal.jpg">
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Sujal</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
@@ -454,6 +458,37 @@
 					</div>
 				</div>
 				</div>
+				<div class="p-4 lg:w-1/2">
+					<div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
+						<img alt="Sujal" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/xnesa.jpg">
+						<div class="flex-grow sm:pl-8">
+						<h2 class="title-font font-medium text-lg text-white">Uneza</h2>
+						<h3 class="text-gray-500 mb-3">DESIGNATION ADVISOR</h3>
+						<p class="mb-4">I eat 5 Star & Do nothing</p>
+						<span class="inline-flex">
+							<!-- <a class="text-gray-500">
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+								<path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+							</svg>
+							</a>
+							<a class="ml-2 text-gray-500">
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+								<path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+							</svg>
+							</a> -->
+							<!-- <a class="ml-2 text-gray-500" href="https://sujal.info/" target="_blank">
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+								<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+							</svg>
+							<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path d="M5 12h14"></path>
+								<path d="M12 5l7 7-7 7"></path>
+							</svg>
+							</a> -->
+						</span>
+						</div>
+					</div>
+					</div>
 			</div>
 			</div>
 		</section>
@@ -522,7 +557,7 @@
 						<path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
 						<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
 					  </svg>
-					<h2 class="title-font font-medium text-3xl text-white">74</h2>
+					<h2 class="title-font font-medium text-3xl text-white">2.1K</h2>
 					<p class="leading-relaxed">People Impacted</p>
 				  </div>
 				</div>
@@ -534,7 +569,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-telegram text-green-400 w-12 h-12 mb-3 inline-block" viewBox="0 0 16 16">
 						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
 					  </svg>
-					<h2 class="title-font font-medium text-3xl text-white">46</h2>
+					<h2 class="title-font font-medium text-3xl text-white">1.6K</h2>
 					<p class="leading-relaxed">Telegram Group Users</p>
 				  </div>
 				</div>
