--- a/projects.html
+++ b/projects.html
@@ -40,18 +40,27 @@
 			  <div class="md:flex-grow">
 				<h2 class="text-2xl font-medium text-white title-font mb-2">Find Your Ideal College with College Predictor</h2>
 				<p class="leading-relaxed">Discover the perfect college for your B.Tech CS dreams using our College Predictor tool. Input your rank or percentile from exams like JEE Mains, Advanced, and more, along with your preferred state, and get a curated list of top colleges near you. Our tool offers dark and light themes, a print feature, and prioritizes user privacy—making college selection stress-free and secure!</p>
-				<a class="text-green-400 inline-flex items-center mt-4" href="projects/collage.pred.html">Learn More
+				<a class="text-green-400 inline-flex items-center mt-4" href="collage.pred.html">Learn More
 				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
 					<path d="M5 12h14"></path>
 					<path d="M12 5l7 7-7 7"></path>
 				  </svg>
 				</a>
-				<a class="text-green-400 inline-flex items-center mt-4" href="https://jee-college-predictor.netlify.app/" target="_blank">	Check Tool
+				<a class="text-green-400 inline-flex items-center mt-4" href="https://jee-college-predictor.netlify.app/" target="_blank">&nbsp; &nbsp; &nbsp;	Check Tool 
 					<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
 					  <path d="M5 12h14"></path>
 					  <path d="M12 5l7 7-7 7"></path>
 					</svg>
-				  </a>
+				</a>
+				<a class="text-green-400 inline-flex items-center mt-4" href="https://youtu.be/yvD0_yVpga0" target="_blank">&nbsp; &nbsp; &nbsp; Demo
+					<!-- <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path d="M5 12h14"></path>
+						<path d="M12 5l7 7-7 7"></path>
+					</svg> -->
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube w-4 h-4 ml-2" viewBox="0 0 16 16">
+						<path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
+					  </svg>
+				</a>
 			  </div>
 			</div>
 			<div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
@@ -62,7 +71,7 @@
 			  <div class="md:flex-grow">
 				<h2 class="text-2xl font-medium text-white title-font mb-2">Coming Soon: Simplify Laptop Shopping with Laptop Predictor</h2>
 				<p class="leading-relaxed">Stay tuned for our upcoming project, Laptop Predictor! Determine the ideal laptop based on your budget and purpose. Whether for work, study, or gaming, our tool will help you make the right choice hassle-free. Privacy-friendly and feature-packed—your ultimate laptop shopping companion is on the way!</p>
-				<a class="text-green-400 inline-flex items-center mt-4" href="projects/laptop.pred.html">Learn More
+				<a class="text-green-400 inline-flex items-center mt-4" href="laptop.pred.html">Learn More
 				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
 					<path d="M5 12h14"></path>
 					<path d="M12 5l7 7-7 7"></path>
