minor updates in index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
 
 
 
+	  <!-- <div class="container">
+        <div class="container__header container-grey">
+            Coding Community For Digital Age
+        </div>
+    
+        <div class="container__body container-white">
+            Thousands Of Coders -- from beginners to professionals use Our Platform's resources and 
+            Community To Learn, collaborate, and advance their coding skills. Join Us and be part of
+            the future of the coding..
+        </div>
+    </div>
+
+    <div class="center--item">
+        <h2 class="big--element big--element-gray">Hi Every One</h2>
+    
+        <p class="info info--white">Information Must Be Flow Free, Money Kill it</p>
+    </div> -->
+
+
 
 
 
@@ -68,5 +87,15 @@
 		  </span>
 		</div>
 	  </footer>
+	  <!-- <script>
+		const collapsibles = document.querySelectorAll(".collapsible");
+		collapsibles.forEach((item) =>
+		item.addEventListener("click", function () {
+			this.classList.toggle("collapsible--expanded");
+		})
+		);
+
+		console.log(collapsibles);
+	  </script> -->
 </body>
 </html>
