--- a/collage.pred.html
+++ b/collage.pred.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="media/logo2.png">
+  <link rel="stylesheet" href="styles/button.css">
 </head>
 <body>
 	
@@ -117,7 +118,8 @@
 			</h1>
 			<p class="mb-8 leading-relaxed">The College Predictor tool helps students make informed decisions by analyzing academic data and historical admissions trends. It provides personalized insights to guide college applications, empowering students to succeed in their academic journeys. Try it today!</p>
 			<div class="flex justify-center">
-			  <button onclick="tryNow()" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" >Try Now..!!</button>
+			  <!-- <button onclick="tryNow()" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg kbutton" >Try Now..!!</button> -->
+			  <button class="kbutton" onclick="tryNow()">Try Now..!!</button>
 			  <button onclick="showDemo()" class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Demo</button>
 			</div>
 		  </div>
@@ -446,7 +448,7 @@
 		<div class="container px-5 py-24 mx-auto">
 		  <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
 			<h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-white">Join our Telegram Group</h1>
-			<button onclick="TeleGram()" class="flex-shrink-0 text-white bg-green-500 border-0 py-2 px-8 focus:outline-none hover:bg-green-600 rounded text-lg mt-10 sm:mt-0">Join</button>
+			<button onclick="TeleGram()" class="kbutton">Join</button>
 		  </div>
 		</div>
 	  </section>
