--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="media/logo2.png">
+  <link rel="stylesheet" href="styles/early.css">
 </head>
 <body>
 	
@@ -66,7 +67,11 @@
 			<div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
 			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
 				<span class="font-semibold title-font text-white">LAPTOP PREDICTOR</span>
-				<span class="mt-1 text-gray-500 text-sm">(Coming Soon)</span>
+				<span class="mt-1 text-gray-500 text-sm">
+					<!-- (Coming Soon) -->
+					<a href="#" class="btn-shine">Get early access</a>
+
+				</span>
 			  </div>
 			  <div class="md:flex-grow">
 				<h2 class="text-2xl font-medium text-white title-font mb-2">Coming Soon: Simplify Laptop Shopping with Laptop Predictor</h2>
@@ -82,7 +87,9 @@
 			<div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
 			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
 				<span class="font-semibold title-font text-white">(name not decided)</span>
-				<span class="mt-1 text-gray-500 text-sm">(Coming Soon)</span>
+				<span class="mt-1 text-gray-500 text-sm">
+					(Coming Soon)
+				</span>
 			  </div>
 			  <div class="md:flex-grow">
 				<h2 class="text-2xl font-medium text-white title-font mb-2">Stay Tuned for more updates..!</h2>
