--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/instagram.css">
   <link rel="stylesheet" href="styles/darkmode.css">
   <link rel="stylesheet" href="styles/early.css">
+  <link rel="stylesheet" href="styles/top.css">
 </head>
 <body>
 	
@@ -22,8 +23,11 @@
 			<a class="mr-5 hover:text-white k2font" href="index.html">Home</a>
 			<a class="mr-5 hover:text-white k2font" href="projects.html">Projects</a>
 			<a class="mr-5 hover:text-white k2font" href="contact.html">Contact</a>
-			<a class="mr-5 hover:text-white k2font" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
-				
+			<a class="mr-5 hover:text-white k2font flex items-center" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right ml-1 mb-1" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+					<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+				  </svg>
 			</a>
 		  </nav>
 		  <div class="flex items-center">
@@ -179,5 +183,15 @@
 		  </span>
 		</div>
 	  </footer>
+
+	  <button class="ktopbutton" id="ktopbttn" onclick="topFunction()">
+		<svg class="svgIcon" viewBox="0 0 384 512">
+		  <path
+			d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+		  ></path>
+		</svg>
+	  </button>
+
+	  <script src="scripts/top.js"></script>
 </body>
 </html>
