--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/font.css">
   <link rel="stylesheet" href="styles/instagram.css">
   <link rel="stylesheet" href="styles/darkmode.css">
+  <link rel="stylesheet" href="styles/top.css">
 </head>
 <body>
 	
@@ -21,8 +22,11 @@
 			<a class="mr-5 hover:text-white k2font" href="index.html">Home</a>
 			<a class="mr-5 hover:text-white k2font" href="projects.html">Projects</a>
 			<a class="mr-5 hover:text-white k2font" href="contact.html">Contact</a>
-			<a class="mr-5 hover:text-white k2font" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
-				
+			<a class="mr-5 hover:text-white k2font flex items-center" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right ml-1 mb-1" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+					<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+				  </svg>
 			</a>
 		  </nav>
 		  <div class="flex items-center">
@@ -51,7 +55,23 @@
 		
 	  </header>
 
-
+	  <section class="text-gray-400 bg-gray-900 body-font">
+		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+		  <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center k2font">
+			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Presenting
+				<p>Grand Theft Coders</p>
+			</h1>
+			<p class="mb-8 leading-relaxed">Introducing Grand Theft Coders, a dynamic team of 11 individuals on a mission to conquer the digital realm. Despite most of us facing setbacks like JEE Mains rejections, under the leadership of Aarif Khan, we've found our niche. Join our Telegram group and witness the synergy of our diverse coding skills. Hailing from different corners of India and varied backgrounds, together we're a force to be reckoned with, crafting projects that push the boundaries of possibility.</p>
+			<div class="flex justify-center">
+			  <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" onclick="klap()">Laptop Advisor</button>
+			  <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg" onclick="kproj()">More Projects</button>
+			</div>
+		  </div>
+		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+			<img class="object-cover object-center rounded-full" alt="hero" src="media/logo.jpg">
+		  </div>
+		</div>
+	  </section>
 
 
 	  <footer class="text-gray-400 bg-gray-900 body-font">
@@ -86,5 +106,23 @@
 		  </span>
 		</div>
 	  </footer>
+
+	  <button class="ktopbutton" id="ktopbttn" onclick="topFunction()">
+		<svg class="svgIcon" viewBox="0 0 384 512">
+		  <path
+			d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+		  ></path>
+		</svg>
+	  </button>
+
+	  <script src="scripts/top.js"></script>
+	  <script>
+		function klap(){
+			window.location.href = 'laptop.pred.html'
+		}
+		function kproj() {
+			window.location.href = 'projects.html'
+		}
+	  </script>
 </body>
 </html>
