--- a/laptop.pred.html
+++ b/laptop.pred.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/instagram.css">
   <link rel="stylesheet" href="styles/darkmode.css">
   <link rel="stylesheet" href="styles/button.css">
+  <link rel="stylesheet" href="styles/top.css">
 </head>
 <body>
 	
@@ -22,8 +23,11 @@
 			<a class="mr-5 hover:text-white k2font" href="index.html">Home</a>
 			<a class="mr-5 hover:text-white k2font" href="projects.html">Projects</a>
 			<a class="mr-5 hover:text-white k2font" href="contact.html">Contact</a>
-			<a class="mr-5 hover:text-white k2font" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
-				
+			<a class="mr-5 hover:text-white k2font flex items-center" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right ml-1 mb-1" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+					<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+				  </svg>
 			</a>
 		  </nav>
 		  <div class="flex items-center">
@@ -56,7 +60,7 @@
 	  <section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
-			<img class="object-cover object-center rounded" alt="screenshot of tool" style="border: 5px solid #718096;" src="media/cps (2).png">
+			<img class="object-cover object-center rounded" alt="screenshot of tool" style="border: 5px solid #718096;" src="media/lps.png">
 		  </div>
 		  <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
 			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">LAPTOP ADVISOR
@@ -184,7 +188,7 @@
 		<div class="container px-5 py-24 mx-auto flex flex-wrap">
 		  <h2 class="sm:text-3xl text-2xl text-white font-medium title-font mb-2 md:w-2/5">Disclaimer</h2>
 		  <div class="md:w-3/5 md:pl-6">
-			<p class="leading-relaxed text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi maiores itaque eligendi debitis deleniti aperiam, facere harum rerum eveniet officiis consequuntur iste quibusdam inventore cum? Voluptate earum cupiditate deleniti magni magnam natus odio mollitia blanditiis veniam sapiente ipsum error, rerum harum iste porro nostrum nihil eaque dignissimos officiis quaerat!</p>
+			<p class="leading-relaxed text-base">Welcome to the Laptop Advisor website, your go-to resource for expert laptop recommendations sourced directly from Amazon. Our mission is to assist you in finding the perfect laptop to meet your needs and preferences. It's important to understand how our website operates and the key principles we adhere to. First and foremost, when you explore our curated list of laptops and decide to make a purchase, you will be seamlessly redirected to the official Amazon website. This ensures that you have direct access to the most up-to-date information and pricing available for each laptop. We want to emphasize that we do not engage in any form of commission-based sales or paid promotions related to the laptops featured on our site. Our sole focus is on providing unbiased advice and recommendations based on Amazon's extensive product catalog. Our dedicated GTC (Global Tech Consultants) team has meticulously researched and selected laptops that are guaranteed to perform exceptionally well over the next 8-9 years. Each laptop recommendation is backed by thorough data extraction from Amazon, ensuring that you receive accurate and reliable information. It's important to note that while we strive to provide real-time pricing information, laptop prices on Amazon can fluctuate due to various factors such as promotions, availability, and market conditions. Therefore, the prices displayed on our website may vary from the current listing on Amazon. We encourage you to visit Amazon directly for the most updated pricing and product details when making a purchase decision. Our primary goal is to serve as your trusted advisor in the laptop selection process. Whether you're a student, professional, gamer, or casual user, we're here to guide you towards the most suitable laptop that aligns with your specific requirements. Our recommendations are based on comprehensive reviews, specifications, and user feedback sourced from Amazon's vast community of customers. As part of our commitment to transparency, we want to reiterate that Laptop Advisor is not an ecommerce platform. We do not handle transactions directly or process any payments related to laptop purchases. Instead, our website serves as an informational resource where you can browse through carefully curated laptop recommendations and seamlessly transition to Amazon's platform to complete your purchase securely. Choosing the right laptop is a significant investment, and we understand the importance of making an informed decision. Whether you prioritize performance, design, battery life, or specific features, our curated selection of laptops aims to cater to diverse preferences and budgetary considerations. In summary, Laptop Advisor is dedicated to simplifying the laptop selection process by providing insightful recommendations based on extensive research and data extraction from Amazon. We invite you to explore our comprehensive laptop listings, knowing that each recommendation is backed by our commitment to accuracy and reliability. Thank you for choosing Laptop Advisor as your trusted resource for expert laptop recommendations. Should you have any questions or require further assistance, please do not hesitate to reach out to our team. Happy laptop hunting!</p>
 			<!-- <div class="flex md:mt-4 mt-6">
 			  <button class="inline-flex text-white bg-green-500 border-0 py-1 px-4 focus:outline-none hover:bg-green-600 rounded">Button</button>
 			  <a class="text-green-400 inline-flex items-center ml-4">Learn More
@@ -208,7 +212,7 @@
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-500 mb-4" viewBox="0 0 975.036 975.036">
 				  <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
 				</svg>
-				<p class="leading-relaxed mb-6">After not scoring well in JEE Mains during my 12th, I decided to take a drop year and joined an offline coaching in Kota. Although my marks improved, I still couldn't qualify for JEE Advanced. Then I found the College Predictor tool. To my surprise, it helped me discover a great government college in a neighboring city that I wasn't aware of. Now, I'm pursuing a B.Tech in Computer Science, the top branch, and I couldn't be happier. If only this tool existed earlier, I could have saved my drop year. Kudos to the G.T.C team for such an amazing tool!</p>
+				<p class="leading-relaxed mb-6">I was struggling with a low-spec laptop and decided it was time to upgrade. With a budget of ₹60,000, I planned to visit Nehru Place in Delhi. Thanks to the Laptop Advisor tool, I now have a clear estimate of the specs I can get within my budget. The tool helped me understand which graphics card, processor, RAM, and storage I should aim for. I've seen friends buy laptops in the same price range with much lower specs because they didn't have an estimate of what to buy. This tool is a game-changer!</p>
 				<a class="inline-flex items-center" href="https://t.me/Dr_AiR">
 				  <img alt="air profile" src="media/air.png" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
 				  <span class="flex-grow flex flex-col pl-4">
@@ -223,11 +227,11 @@
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-500 mb-4" viewBox="0 0 975.036 975.036">
 				  <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
 				</svg>
-				<p class="leading-relaxed mb-6">I took online coaching during my 11th and 12th grades and managed to get a good percentile in JEE Mains, qualifying for JEE Advanced. Unfortunately, I didn't qualify in JEE Advanced. I also gave the CUET and qualified, but after all these exams, I was confused about which college to choose. Then I found the College Predictor tool. It guided me to a great NIT in my state with a Robotics and AI branch. This tool made my decision so much easier, and I'm now excited about my future. Thank you, G.T.C team, for this incredible tool! It saved my life..!</p>
+				<p class="leading-relaxed mb-6">Finding a good Intel Windows laptop within my ₹150,000 budget was a hassle. I watched countless YouTube videos and researched over 100 laptops but was still confused. One day, I received a notice on GTC's Telegram group, urging me to trust their Laptop Advisor tool. The message promised to provide the best possible laptop in my price range. I decided to stop my research and trust them. Thanks to GTC's dedication and hard work, I ended up with the best laptop I couldn't have imagined.</p>
 				<a class="inline-flex items-center">
-				  <img alt="Sarita Kumari Profile" src="media/undefined (1).jpeg" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+				  <img alt="Pooja's Profile" src="media/download.jpg" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
 				  <span class="flex-grow flex flex-col pl-4">
-					<span class="title-font font-medium text-white">Sarita Kumari</span>
+					<span class="title-font font-medium text-white">Pooja Rohilla</span>
 					<span class="text-gray-500 text-sm">USER OF THIS TOOL</span>
 				  </span>
 				</a>
@@ -244,7 +248,7 @@
 		<div class="container px-5 py-24 mx-auto">
 		  <div class="text-center mb-20">
 			<h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-white mb-4">Meet the Creators</h1>
-			<p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">This project was brought to life by the talented team at Grand Theft Coders (G.T.C). Our dedicated developers and data analysts worked tirelessly to create a reliable and user-friendly College Predictor tool. With a shared vision of helping students navigate their educational paths, the team meticulously gathered and analyzed data to provide accurate and personalized college recommendations. Our collective effort ensures that every student can find their ideal college match.</p>
+			<p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">This project was brought to life by the talented team at Grand Theft Coders (G.T.C). Our dedicated developers and data analysts worked tirelessly to create a reliable and user-friendly Laptop Advisor Tool. With a shared vision of helping students navigate their educational paths, the team meticulously gathered and analyzed data to provide accurate and personalized laptop recommendations. Our collective effort ensures that every student can find their ideal college match.</p>
 		  </div>
 		  <div class="flex flex-wrap lg:w-4/5 sm:mx-auto sm:mb-2 -mx-2">
 			<div class="p-2 sm:w-1/2 w-full">
@@ -271,7 +275,7 @@
 				  <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
 				  <path d="M22 4L12 14.01l-3-3"></path>
 				</svg>
-				<span class="title-font font-medium text-white">Sujal</span>
+				<span class="title-font font-medium text-white">Mahi</span>
 			  </div>
 			</div>
 			<div class="p-2 sm:w-1/2 w-full">
@@ -289,10 +293,10 @@
 				  <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
 				  <path d="M22 4L12 14.01l-3-3"></path>
 				</svg>
-				<span class="title-font font-medium text-white">Ayush</span>
+				<span class="title-font font-medium text-white">Arghadwip</span>
 			  </div>
 			</div>
-			<div class="p-2 sm:w-1/2 w-full">
+			<!-- <div class="p-2 sm:w-1/2 w-full">
 			  <div class="bg-gray-800 rounded flex p-4 h-full items-center">
 				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="text-green-400 w-6 h-6 flex-shrink-0 mr-4" viewBox="0 0 24 24">
 				  <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
@@ -300,7 +304,7 @@
 				</svg>
 				<span class="title-font font-medium text-white">Sam</span>
 			  </div>
-			</div>
+			</div> -->
 			<div class="p-2 sm:w-1/2 w-full">
 				<div class="bg-gray-800 rounded flex p-4 h-full items-center">
 				  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="text-green-400 w-6 h-6 flex-shrink-0 mr-4" viewBox="0 0 24 24">
@@ -432,6 +436,16 @@
 		  </span>
 		</div>
 	  </footer>
+
+	  <button class="ktopbutton" id="ktopbttn" onclick="topFunction()">
+		<svg class="svgIcon" viewBox="0 0 384 512">
+		  <path
+			d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+		  ></path>
+		</svg>
+	  </button>
+
+	  <script src="scripts/top.js"></script>
 
 	  <script>
 		function tryNow() {
