home button (main) enhanced

--- a/v1 (old)/contact.html
+++ b/v1 (old)/contact.html
@@ -160,7 +160,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aarif Khan</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor. He is founder of GTC</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor. He is founder of GTC</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500" href="facebook.com">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -191,7 +191,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Sam</h2>
 						<h3 class="text-gray-500 mb-3">Security</h3>
-						<p class="mb-4">CyberSecurity expert. Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">CyberSecurity expert. Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -221,7 +221,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Mahi</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Designer, Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Designer, Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -310,7 +310,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Ankit</h2>
 						<h3 class="text-gray-500 mb-3">Frontend</h3>
-						<p class="mb-4">Jee Aspirant, Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Jee Aspirant, Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -341,7 +341,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Divyansh</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<a class="text-gray-500" href="https://www.instagram.com/artista_valley" target="_blank">
 							<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -373,7 +373,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Ayush</h2>
 					<h3 class="text-gray-500 mb-3">Designer</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/ayush_py" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -403,7 +403,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aryan</h2>
 					<h3 class="text-gray-500 mb-3">UI Developer</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/itterashai_eren" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -433,7 +433,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Sujal</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
