--- a/v1 (old)/projects.html
+++ b/v1 (old)/projects.html
@@ -74,8 +74,8 @@
 				</span>
 			  </div>
 			  <div class="md:flex-grow">
-				<h2 class="text-2xl font-medium text-white title-font mb-2">Coming Soon: Simplify Laptop Shopping with Laptop Predictor</h2>
-				<p class="leading-relaxed">Stay tuned for our upcoming project, Laptop Predictor! Determine the ideal laptop based on your budget and purpose. Whether for work, study, or gaming, our tool will help you make the right choice hassle-free. Privacy-friendly and feature-packed—your ultimate laptop shopping companion is on the way!</p>
+				<h2 class="text-2xl font-medium text-white title-font mb-2">Coming Soon: Simplify Laptop Shopping withLaptop Advisor</h2>
+				<p class="leading-relaxed">Stay tuned for our upcoming project,Laptop Advisor! Determine the ideal laptop based on your budget and purpose. Whether for work, study, or gaming, our tool will help you make the right choice hassle-free. Privacy-friendly and feature-packed—your ultimate laptop shopping companion is on the way!</p>
 				<a class="text-green-400 inline-flex items-center mt-4" href="laptop.pred.html">Learn More
 				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
 					<path d="M5 12h14"></path>
