--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aarif Khan</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor. He is founder of GTC</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor. He is founder of GTC</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500" href="facebook.com">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -281,7 +281,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Sam</h2>
 						<h3 class="text-gray-500 mb-3">Security</h3>
-						<p class="mb-4">CyberSecurity expert. Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">CyberSecurity expert. Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -311,7 +311,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Mahi</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Designer, Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Designer, Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -400,7 +400,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Ankit</h2>
 						<h3 class="text-gray-500 mb-3">Frontend</h3>
-						<p class="mb-4">Jee Aspirant, Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Jee Aspirant, Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -431,7 +431,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Divyansh</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+						<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<a class="text-gray-500" href="https://www.instagram.com/artista_valley" target="_blank">
 							<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -463,7 +463,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Ayush</h2>
 					<h3 class="text-gray-500 mb-3">Designer</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/ayush_py" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -493,7 +493,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aryan</h2>
 					<h3 class="text-gray-500 mb-3">UI Developer</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/itterashai_eren" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -523,7 +523,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Sujal</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
+					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -554,7 +554,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Arghadwip</h2>
 						<h3 class="text-gray-500 mb-3">Backend</h3>
-						<p class="mb-4">Worked in Laptop Predictor.</p>
+						<p class="mb-4">Worked inLaptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
