--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/instagram.css">
   <link rel="stylesheet" href="styles/darkmode.css">
   <link rel="stylesheet" href="styles/top.css">
+  <link rel="stylesheet" href="styles/homebtn.css">
 </head>
 <body>
 	
@@ -63,8 +64,8 @@
 			</h1>
 			<p class="mb-8 leading-relaxed">Introducing Grand Theft Coders, a dynamic team of 11 individuals on a mission to conquer the digital realm. Despite most of us facing setbacks like JEE Mains rejections, under the leadership of Aarif Khan, we've found our niche. Join our Telegram group and witness the synergy of our diverse coding skills. Hailing from different corners of India and varied backgrounds, together we're a force to be reckoned with, crafting projects that push the boundaries of possibility.</p>
 			<div class="flex justify-center">
-			  <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" onclick="klap()">Laptop Advisor</button>
-			  <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg" onclick="kproj()">More Projects</button>
+			  <button class="khomecbutton" onclick="klap()">Laptop Advisor</button>
+			  <button class="ml-4 text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg" onclick="kproj()">More Projects</button>
 			</div>
 		  </div>
 		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
