--- a/projects.html
+++ b/projects.html
@@ -102,8 +102,8 @@
 				</span>
 			  </div>
 			  <div class="md:flex-grow">
-				<h2 class="text-2xl font-medium text-white title-font mb-2">Discover Your Ideal Laptop with Laptop Predictor</h2>
-				<p class="leading-relaxed">Our Laptop Predictor is designed to help you find the perfect laptop based on your budget and specific needs. With comprehensive data from top brands and trusted stores, this tool ensures you make an informed decision for your next purchase.</p>
+				<h2 class="text-2xl font-medium text-white title-font mb-2">Discover Your Ideal Laptop withLaptop Advisor</h2>
+				<p class="leading-relaxed">OurLaptop Advisor is designed to help you find the perfect laptop based on your budget and specific needs. With comprehensive data from top brands and trusted stores, this tool ensures you make an informed decision for your next purchase.</p>
 				<a class="text-green-400 inline-flex items-center mt-4" href="laptop.pred.html">Learn More
 				  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
 					<path d="M5 12h14"></path>
