--- a/sample.html
+++ b/sample.html
@@ -27,7 +27,7 @@
           </div>
         </div>
       </section>
-    <div class="card">
+    <div class="scard">
         <div class="card2">
             <p class="kug kfont"><a href="index.html">Grand Theft Coder</a></p>
         </div>
