major enhanments and issues fixed

--- a/sample.html
+++ b/sample.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/sample.css">
     <link rel="stylesheet" href="styles/font.css">
     <script src="https://cdn.tailwindcss.com"></script>
+  <title>Grand Theft Coders</title>
     <link rel="stylesheet" href="styles/top.css">
 </head>
 <body style="background-color: #111827;">
