--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <title>Grand Theft Coders</title>
   <link rel="icon" type="image/png" href="media/logo2.png">
   <link rel="stylesheet" href="styles/font.css">
   <link rel="stylesheet" href="styles/instagram.css">
@@ -68,7 +69,7 @@
 					</div>
 				</div>
 			</h1>
-			<p class="mb-8 leading-relaxed ml-3">Introducing Grand Theft Coders, a dynamic team of 11 individuals on a mission to conquer the digital realm. Despite most of us facing setbacks like JEE Mains rejections, under the leadership of Aarif Khan, we've found our niche. Join our Telegram group and witness the synergy of our diverse coding skills. Hailing from different corners of India and varied backgrounds, together we're a force to be reckoned with, crafting projects that push the boundaries of possibility.</p>
+			<p class="mb-8 leading-relaxed ml-3">Introducing Grand Theft Coders, a dynamic team of 12 individuals on a mission to conquer the digital realm. Despite most of us facing setbacks like JEE Mains rejections, under the leadership of Aarif Khan, we've found our niche. Join our Telegram group and witness the synergy of our diverse coding skills. Hailing from different corners of India and varied backgrounds, together we're a force to be reckoned with, crafting projects that push the boundaries of possibility.</p>
 			<div class="flex justify-center ml-3">
 			  <button class="khomecbutton" onclick="klap()">Laptop Advisor</button>
 			  <button class="ml-4 text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg" onclick="kproj()">More Projects</button>
