--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <title>Grand Theft Coders</title>
   <link rel="icon" type="image/png" href="media/logo2.png">
   <link rel="stylesheet" href="styles/font.css">
   <link rel="stylesheet" href="styles/instagram.css">
