gitches fixed on tele request

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,8 @@
 						  </span>
 						  <span class="BG"></span>
 						</button>
-
+					  </div>
+					  <div class="social-card">
 						<button class="Btn instagram" onclick="kinsta()">
 							<span class="svgContainer">
 								<svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-instagram" height="1.6em" viewBox="0 0 16 16">
@@ -275,7 +276,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aarif Khan</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor. He is founder of GTC</p>
+					<p class="mb-4">Worked in College Predictor,Laptop Advisor. He is founder of GTC</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500" href="facebook.com">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -305,8 +306,8 @@
 					<img alt="Sam" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/sam.jpg">
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Sam</h2>
-						<h3 class="text-gray-500 mb-3">Security</h3>
-						<p class="mb-4">CyberSecurity expert. Worked in Collage Predictor,Laptop Advisor.</p>
+						<h3 class="text-gray-500 mb-3">Panda</h3>
+						<p class="mb-4">Eat five star & do nothing</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -318,7 +319,7 @@
 							<path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
 							</svg>
 						</a> -->
-						<a class="ml-2 text-gray-500" href="https://t.me/+5WyRndfNrG5hZjg1" target="_blank">
+						<a class="ml-2 text-gray-500" href="https://t.me/+DD1P61PSl8IwMzM9" target="_blank">
 							<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
 							<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
 							</svg> -->
@@ -336,7 +337,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Mahi</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Designer, Worked in Collage Predictor,Laptop Advisor.</p>
+						<p class="mb-4">Designer, Worked in College Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -425,7 +426,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Ankit</h2>
 						<h3 class="text-gray-500 mb-3">Frontend</h3>
-						<p class="mb-4">Jee Aspirant, Worked in Collage Predictor,Laptop Advisor.</p>
+						<p class="mb-4">Jee Aspirant, Worked in College Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -456,7 +457,7 @@
 					<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Divyansh</h2>
 						<h3 class="text-gray-500 mb-3">UI Developer</h3>
-						<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
+						<p class="mb-4">Worked in College Predictor,Laptop Advisor.</p>
 						<span class="inline-flex">
 						<a class="text-gray-500" href="https://www.instagram.com/artista_valley" target="_blank">
 							<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -488,7 +489,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Ayush</h2>
 					<h3 class="text-gray-500 mb-3">Designer</h3>
-					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
+					<p class="mb-4">Worked in College Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/ayush_py" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -518,7 +519,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Aryan</h2>
 					<h3 class="text-gray-500 mb-3">UI Developer</h3>
-					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
+					<p class="mb-4">Worked in College Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<a class="text-gray-500" href="https://t.me/itterashai_eren" target="_blank">
 						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -548,7 +549,7 @@
 					<div class="flex-grow sm:pl-8">
 					<h2 class="title-font font-medium text-lg text-white">Sujal</h2>
 					<h3 class="text-gray-500 mb-3">Backend</h3>
-					<p class="mb-4">Worked in Collage Predictor,Laptop Advisor.</p>
+					<p class="mb-4">Worked in College Predictor,Laptop Advisor.</p>
 					<span class="inline-flex">
 						<!-- <a class="text-gray-500">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -613,8 +614,8 @@
 						<img alt="Sujal" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/xnesa.jpg">
 						<div class="flex-grow sm:pl-8">
 						<h2 class="title-font font-medium text-lg text-white">Uneza</h2>
-						<h3 class="text-gray-500 mb-3">DESIGNATION ADVISOR</h3>
-						<p class="mb-4">I eat 5 Star & Do nothing</p>
+						<h3 class="text-gray-500 mb-3">HR</h3>
+						<p class="mb-4">Suggestion at its best.</p>
 						<span class="inline-flex">
 							<!-- <a class="text-gray-500">
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
