--- a/v1 (old)/collage.pred.html
+++ b/v1 (old)/collage.pred.html
@@ -205,7 +205,7 @@
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
 				<h2 class="font-medium title-font text-white mb-1 text-xl">Collecting Details</h2>
-				<p class="leading-relaxed">Now you can see your elligible collages based on 2023 data. Print it, take screenshot, note it, It's Completely Yours</p>
+				<p class="leading-relaxed">Now you can see your elligible college(s) based on 2023 data. Print it, take screenshot, note it, It's Completely Yours</p>
 			  </div>
 			</div>
 		  </div>
