--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 		  <div class="-my-8 divide-y-2 divide-gray-800">
 			<div class="py-8 flex flex-wrap md:flex-nowrap">
 			  <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-				<span class="font-semibold title-font text-white">COLLAGE PREDICTOR</span>
+				<span class="font-semibold title-font text-white">COLLEGE PREDICTOR</span>
 				<span class="mt-1 text-gray-500 text-sm">24 Apr 2024</span>
 			  </div>
 			  <div class="md:flex-grow">
